# triton_change

./: .env.example  .gitattributes  .gitignore  README.md  onnx_triton_single_file_agent_spec.md  pyproject.toml
.github/workflows/: ci.yml
examples/: improved_triton_mapping_rules.md
schemas/: evaluator_schema.json  patch_ops_schema.json  task_schema.json  trajectory_schema.json
scripts/: _dump_step.py  _inspect_jsonl.py  _inspect_trajectory.py  _summarize_baseline.py  analyze_onnx_diff.py  build_cpu_demo_patches.py  build_dpo_pairs.py  check_no_secrets.py  eval_patch_oracle.py  export_sft.py  export_trajectory.py  generate_tasks.py  report_metrics.py  run_acceptance.py  run_agent.py  run_baseline.py  run_phase1.py  run_phase1_batch.py  run_phase2_baseline.py  run_rl_rollout.py  smoke_test_deepseek.py  task_catalog.py  task_config.py  task_profiles.py  validate_all_tasks.py  validate_task.py
skills/triton-onnx-delta/: SKILL.md
src/triton_change/: __init__.py  correctness.py  patcher.py  reward.py  static_check.py
tasks/task_000001/: meta.json  old_model_triton.py  trajectory.json
tasks/task_000002/: meta.json  old_model_triton.py
tasks/task_000003/: meta.json  old_model_triton.py
tasks/task_000004/: meta.json  (+1 more)
tests/: test_agent_observation.py  test_agent_runner.py  test_agent_tools.py  test_correctness.py  test_diff_analyzer.py  test_evaluator.py  test_export_sft.py  test_no_secrets.py  test_patch_judge.py  test_patcher.py  test_reward.py  test_schemas.py  test_shape_utils.py  test_static_check.py  test_task_catalog.py  test_training.py
(+894 files in other folders)
