[project]
name = "triton-change"
version = "0.2.0"
description = "ONNX-guided Triton single-file kernel migration agent."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "onnx>=1.16",
  "openai>=1.30",
  "jsonschema>=4.20",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
dotenv = ["python-dotenv>=1.0"]
langgraph = ["langgraph>=0.2.60"]
triton-runtime = ["triton>=2.1"]
dev = ["pytest>=8.0", "python-dotenv>=1.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
